tests/Error/ErrorCollector/SniffRunnerSource/easy-coding-standard.neon
checkers:
    - PHP_CodeSniffer\Standards\PSR2\Sniffs\Classes\ClassDeclarationSniff